--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.4</version> <!-- Aktualisieren Sie die Version auf die entsprechende Spring Boot-Version -->
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.5.4</version>
+        <relativePath/>
     </parent>
     <groupId>com.example</groupId>
     <artifactId>JakartaStudyProject</artifactId>
